--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -27,6 +27,7 @@
 
 
 
+
 body,
 input,
 textarea,
@@ -486,11 +487,14 @@ section.form .container {
   flex-wrap: wrap;
   margin: 0 -15px;
 }
+#image1-a2 P {
+  font-family: 'Source Sans Pro', sans-serif;
+}
 #social-buttons1-aa .mbr-section-title {
   text-align: center;
   font-size: 16px;
 }
-#image1-a2 P {
+#image1-j5 P {
   font-family: 'Source Sans Pro', sans-serif;
 }
 #header3-gi .mbr-section-title,
