--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5,9 +5,9 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Lora:400,700);
 @import url(https://fonts.googleapis.com/css?family=Bitter:400,700);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=Lora:400,700);
 @import url(https://fonts.googleapis.com/css?family=PT+Serif:400,400i,700,700i);
 @import url(https://fonts.googleapis.com/css?family=Merriweather:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
@@ -721,9 +721,19 @@ section.form .container {
 
 
 
+
 #header3-3j .mbr-section-title,
 #header3-3j .mbr-section-subtitle {
   text-align: center;
+}
+#header3-k4 .mbr-section-title,
+#header3-k4 .mbr-section-subtitle {
+  text-align: center;
+}
+#header3-k4 .mbr-section-title {
+  font-family: 'Lora', serif;
+  color: #2969b0;
+  font-size: 24px;
 }
 #features3-jw H4 {
   font-family: 'Slabo 27px', serif;
